# meetangee-task

./: .gitignore  .travis.yml  Adler32Generator.h  CHANGELOG.md  CMakeLists.txt  DownloaderFile.cpp  DownloaderFile.h  DownloaderParallel.cpp  DownloaderParallel.h  DownloaderString.cpp  DownloaderString.h  Doxyfile  Gumbo.hpp  HTMLParser.cpp  HTMLParser.h  HTTPDownloader.cpp  HTTPDownloader.h  ICurlEasyDownloader.h  LICENSE  README.md  SoupWrapper.cpp  SoupWrapper.h  TextColor.hpp  URI.cpp  build-and-run.sh  install-gumbo.sh  itransition-task.pro  main.cpp  sonar-project.properties
EasyCurl/: CHANGELOG.md  CMakeLists.txt
EasyCurl/src/: DownloaderFile.cpp  DownloaderFile.h  DownloaderParallel.cpp  DownloaderParallel.h  DownloaderParallelSelect.cpp  DownloaderParallelSelect.h  DownloaderString.cpp  DownloaderString.h  ICurlEasyDownloader.h  easycurl_global.h
EasyGumbo/: CHANGELOG.md  CMakeLists.txt
EasyGumbo/src/: DFSIterator.cpp  DFSIterator.h  Element.cpp  Element.h  Gumbo.cpp  Gumbo.h  HasAttribute.cpp  HasAttribute.h  LogicalAnd.hpp  Operations.hpp  Tag.cpp  Tag.h  Vector.hpp  easygumbo_global.h
doc/: Doxyfile
src/: Adler32Generator.cpp  Adler32Generator.h  Controller.cpp  Controller.h  DownloaderFile.cpp  DownloaderFile.h  DownloaderParallel.cpp  DownloaderParallel.h  DownloaderString.cpp  DownloaderString.h  FileInfo.cpp  FileInfo.h  FileInfoContainer.cpp  FileInfoContainer.h  Gumbo.hpp  HTMLParser.cpp  HTMLParser.h  ICurlEasyDownloader.h  TextColor.cpp  TextColor.h  TextColorCode.h  URI.cpp  URI.h  color_global.h  main.cpp
